--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,3 +1,8 @@
 .button {
-    border-radius: 5px;
+    border-radius: 40px;
+    width: 232px;
+    padding-block: 15px;
+    border:none;
+    cursor: pointer;
+    font-family: 'Nunito Regular';
 }
