--- a/scss/layout/_articles.scss
+++ b/scss/layout/_articles.scss
@@ -1,18 +1,24 @@
 .articles {
-   
+    
     &__list {
         display: flex;
         flex-direction: column;
-        
-    }
-    &__item {
         max-width: 450px;
         margin: 0 auto;
-        
+        padding-top: 120px;
+        row-gap: 104px;
+    }
+    &__content {
+         row-gap: 18px;
+    }
+    &__item {
+        width: 100%;
+        margin: 0 auto;
     }
     &__image {
         width: 304px;
         height: 352px;
+       
         background-size: cover;
         background-position: center;
         margin: 0 auto;
@@ -61,12 +67,19 @@
 @media screen and  (min-width: 769px) {
     
     .articles {
+        
         &__list {
             display: grid;
             column-gap: 24px;
+            max-width: 760px;
+            padding-top: 160px;
+        }
+        &__content {
+            row-gap: 24px;
         }
         &__item {
             max-width: 584px;
+            
             
             &--1 {
                 grid-column: 1;
@@ -79,6 +92,7 @@
             &--3 {
                 grid-column: 1 / 3;
                 grid-row: 2;
+                max-width: 704px;
             }
             &--4{
                 grid-column: 1;
@@ -100,6 +114,8 @@
             }
             &--3 {
                 mask-image: url("../../images/masks/articles/design_2-md.svg");
+                width: 100%;
+                height: 320px;
             }
             &--4 {
                 mask-image: url("../../images/masks/articles/marketing-md.svg");
@@ -107,6 +123,25 @@
             &--5 {
                 mask-image: url("../../images/masks/articles/software-md.svg");
             }
+        }
+        &__content {
+            &--3 {
+                display: grid;
+            }
+        }
+        &__tags--3 {
+            grid-row: 1;
+            grid-column: 1;
+        }
+        &__title--3 {
+            grid-column: 2;
+        }
+        &__description--3 {
+            grid-column: 2;
+        }
+        &__date--3 {
+            grid-row: 2;
+            grid-column: 1;
         }
     }
 }
@@ -116,6 +151,18 @@
     .articles {
         &__list {
             column-gap: 40px;
+            max-width: none;
+            padding-top: 224px;
+            row-gap: 136px;
+        }
+        &__content {
+             row-gap: 32px;
+        }
+        &__item {
+           
+            &--3 {
+                max-width: 1208px;
+            }
         }
         &__image {
             width: 584px;
@@ -128,6 +175,8 @@
             }
             &--3 {
                 mask-image: url("../../images/masks/articles/design_2-xl.svg");
+                width: 100%;
+                height: 520px;
             }
             &--4 {
                 mask-image: url("../../images/masks/articles/marketing-xl.svg");
