--- a/scss/layout/_intro.scss
+++ b/scss/layout/_intro.scss
@@ -2,6 +2,7 @@
   &__wrapper {
     display: flex;
     flex-direction: column;
+    padding-top: 24px;
   }
 
   &__image {
@@ -18,12 +19,14 @@
     mask-position: center top;
   }
 
-
+  &__title {
+    font-size: 36px;
+  }
   &__content {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-   
+    row-gap: 18px;
   }
 }
 
@@ -39,7 +42,9 @@
 /*tablet с 769*/
 @media screen and (min-width: 769px) {
   .intro {
-  
+    &__wrapper {
+      padding-top: 48px;
+    }
     &__image {
       width: 100%;
       mask-image: url("../../images/masks/intro/mask-md.svg");
@@ -74,6 +79,7 @@
     &__wrapper {
       flex-direction: row;
       column-gap: 40px;
+      padding-top: 80px;
     }
     &__content {
       display: flex;
