--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+*{
+  margin: 0;
+  padding: 0;
+}
 a {
   font-weight: 500;
   color: #646cff;
@@ -35,32 +39,15 @@ h1 {
   line-height: 1.1;
 }
 
+li {
+  list-style-position: inside;
+  list-style-type: none;
+}
 #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
 
 button {
@@ -93,4 +80,61 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.upload {
+  max-width: 900px;
+  margin: 0 auto;
+  background-color:#747bff;
+  border-radius: 10px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+/* .upload__title{
+  margin-bottom: 20px;
+}
+.upload__form{
+  margin-bottom: 20px;
+} */
+
+.upload__input {
+  color: transparent;
+}
+
+.errors__list {
+  text-align: left;
+}
+
+.errors__list li {
+  
+  color: red;
+}
+
+.upload__list {
+  text-align: left;
+}
+
+.upload__list li {
+  border:1px solid black;
+  padding: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex: 1 0 0;
+  min-width: 0;
+
+}
+.upload__list li > span {
+  flex: 1 0 0;
+  min-width: 0;
+  
+  text-align: center;
+}
+
+li img {
+  max-width: 100px;
 }
